# dark-souls-route-planner

./: README.md  README.rst  SL1MeleeOnlyGlitchless.ipynb  checks.py  index.html  pyproject.toml
.github/workflows/: generate-recipe-pages.yml  generate-route-pages.yml
docs/: SL1MeleeOnlyGlitchlessBATTLEAXEPLUS3.html  SL1MeleeOnlyGlitchlessBATTLEAXEPLUS4.html  SL1MeleeOnlyGlitchlessBATTLEAXEPLUS4NOBLACKKNIGHT.html  SL1MeleeOnlyGlitchlessBattleAxe4or3.html  SL1MeleeOnlyGlitchlessBattleAxe4skippingBlackKnight.html  SL1MeleeOnlyGlitchlessREINFORCEDCLUB.html  SL1MeleeOnlyGlitchlessReinforcedClub5.html  SL1RangelessGlitchlessBattleAxe4or3.html  SL1RangelessGlitchlessBattleAxe4skippingBlackKnight.html  SL1RangelessGlitchlessReinforcedClub5.html  SL1RangelessHitlessAnywithBattleAxe4.html  SL1RangelessHitlessAnywithReinforcedClub5.html  SL1RangelessHitlessAnywithoutBlackKnightwithBattleAxe4.html  index.html
route_planner/: action.py  application.py  event.py  report.py  route.py  segment.py  sl1.py
route_planner/routes/: sl1_melee_only_glitchless.py  sl1_rangeless_glitchless.py  sl1_rangeless_hitless.py
route_planner/styles/: light.css
tests/: test_route_planner.py
wwwroot/: test.html
