[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.isort]
line_length = 79
profile = "black"

[tool.poetry]
name = "route-planner"
version = "0.1.0"
description = ""
authors = ["Jacob McIntosh <nacitar.sevaht@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"
flake8 = "^6.1.0"
black = {extras = ["jupyter"], version = "^23.11.0"}

[tool.poetry.scripts]
route-planner = "route_planner.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
